# angular-signal-explore-nx

./: README.md  nx.json  package-lock.json  package.json
apps/apps/todo_rust/todo_rust/: Cargo.toml  project.json
apps/apps/todo_rust/todo_rust/migrations/: 20231225060800_intial.sql
apps/apps/todo_rust/todo_rust/src/: main.rs
apps/todo-angula/: .eslintrc.json  jest.config.ts  project.json
apps/todo-angula-e2e/: playwright.config.ts  project.json
apps/todo-angula/src/: index.html
apps/todo-angula/src/app/: app.component.html  app.component.spec.ts  app.component.ts  nx-welcome.component.ts
apps/todo-nest/: jest.config.ts  project.json
apps/todo-nest-e2e/: jest.config.ts  project.json
apps/todo-nest/src/app/: app.controller.ts  app.module.ts  app.service.ts
apps/todo-nest/src/app/user/: user.controller.ts  user.module.ts  user.service.ts
apps/todo-nest/src/entity/: project.entity.ts  task-category-association.entity.ts  task-category.entity.ts  task.entity.ts  user.entity.ts
apps/todo-nest/src/interface/: todo.ts
apps/todo-service/: jest.config.ts  project.json
apps/todo-service-e2e/: project.json
apps/todo-service/src/: main.ts
apps/todo-service/src/comman/database/: index.ts
apps/todo-service/src/comman/util/: error-handler.ts
apps/todo-service/src/controller/: project.controller.ts  user.controller.ts
apps/todo-service/src/entity/: Project.entity.ts  User.entity.ts  entity-type.ts  task.entity.ts
apps/todo-service/src/routes/: index.ts  project.route.ts  user.router.ts
